# langgpt

./: LICENSE  Makefile  README.md  pyproject.toml  training.ipynb
docs/: mkdocs.yml
docs/docs/: index.md
langgpt/: __init__.py  dataset.py  features.py  plots.py
langgpt/modeling/: predict.py  train.py
