[tool.poetry]
name = "langgpt"
version = "0.1.0"
description = "Reimplementation of the paper `Attention Is All You Need` for language translation."
authors = ["Srikar V <srikarvuchiha@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
pyupgrade = "^3.16.0"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
